Fixnum product would overflow. Bit fiddling operations with negative fixnums now work. Remove unportable code of the type va_list d = cs. Simplify gathering of &rest and &key arguments in compiled code.

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -741,6 +741,12 @@ ECLS 0.3b
   - Bit fiddling operations with negative fixnums now work (i.e.
     LOGAND, LOGOR, LOGBITP, etc).
 
+* System design and portability:
+
+  - Remove unportable code of the type "va_list d = cs".
+
+  - Simplify gathering of &rest and &key arguments in compiled code.
+
 TODO:
 =====
 
