Simplified compilation of &aux parameters in lambda lists. Fixed bug in the compiler for MULTIPLE-VALUE-BIND: resulting code would not undo bindings of special variables. Optimized statements like (let ((*special-var* *special-var*)) ...) where *special-var* is a special variable.

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -810,6 +810,9 @@ ECLS 0.5
 
   - The order of evaluation of arguments in a PSETQ was not respected.
 
+  - The compiler would not restore the value of a special variable which
+    is used in MULTIPLE-VALUE-BIND.
+
 * System design and portability:
 
   - Remove function_entry_table.
