--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -813,6 +813,9 @@ ECLS 0.5
   - The compiler would not restore the value of a special variable which
     is used in MULTIPLE-VALUE-BIND.
 
+  - The compiler produced wrong code for CATCH forms in which the tag
+    is not constant.
+
 * System design and portability:
 
   - Remove function_entry_table.
