--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -887,6 +887,15 @@ ECL 0.6
 
   - Code for handling :IMPORT-FROM in DEFPACKAGE was bogus
 
+  - The arguments of GENSYM should not be remembered by ECLS. The
+    current behaviour was wrong:
+		> (gensym)
+		#:G36
+		> (gensym "F")
+		#:F37
+		> (gensym)
+		#:F38
+
 * System design:
 
   - Function SI:NANI has been removed. Its purpose was to provide an
@@ -907,9 +916,14 @@ ECL 0.6
     structures. Now FORMAT is reentrant and can be safely called from
     within PRINT-OBJECT.
 
+  - All symbols belonging to the LISP package and to the C core, are
+    kept in a single array, "cl_symbols". The translator "dpp" and the
+    routine SI::MANGLE-NAME, output the right name for any symbol
+    which is in this array.
+
 * Visible changes and ANSI compatibility:
 
-  - New configuration flag --with-clos-streams, enable the user to
+  - New configuration flag --with-clos-streams, enables the user to
     define CLOS objects which behave as lisp streams. Such object must
     have the following methods defined: STREAM-INPUT-P,
     STREAM-OUTPUT-P, STREAM-READ-CHAR, STREAM-UNREAD-CHAR,
@@ -921,18 +935,11 @@ ECL 0.6
     libraries. For example, (LOAD (OPEN "foo.lsp")) is equivalent
     to (LOAD "foo.lsp").
 
-  - The arguments of GENSYM should not be remembered by ECLS. The
-    current behaviour is wrong:
-		> (gensym)
-		#:G36
-		> (gensym "F")
-		#:F37
-		> (gensym)
-		#:F38
-
   - ECL now uses a hashtable to store objects when *PRINT-CIRCLE* is
     on. This hashtable is not cleared when calling PRINT-OBJECT, so
     that circularities are also detected inside these methods.
+
+  - *PRINT-CIRCLE* defaults to NIL.
 
 TODO:
 =====
